[tool.poetry]
name = "PanikPlan"
version = "0.1.0"
package-mode = false
description = "AI-powered group dinner planning with MLOps pipeline"
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
pandas = "^2.1.0"
scikit-learn = "^1.3.0"
xgboost = "^2.0.0"
mlflow = "^2.7.0"
fastapi = "^0.103.0"
uvicorn = "^0.23.0"
python-multipart = "^0.0.6"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"